# advent-of-code

./: Cargo.toml  README.md
2015/: Cargo.toml
2015/src/: lib.rs
manager/: Cargo.toml
manager/src/: main.rs  models.rs
src/: commands.rs  grid.rs  lib.rs  main.rs  models.rs
src/days/: day01.rs
src/models/: answer.rs  puzzle.rs
src/year2015/: day02.rs  main.rs
src/year2015/days/: day02.rs  day03.rs
src/year2023/: day01.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
year2015/: Cargo.toml
year2015/src/days/: mod.rs
year2023/: Cargo.toml
year2023/src/: day01.rs  lib.rs  main.rs
