[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
md5 = "0.7.0"

[[bin]]
name = "1501"

[[bin]]
name = "1502"

[[bin]]
name = "1503"

[[bin]]
name = "1504"

[[bin]]
name = "1505"

[[bin]]
name = "1506"

[[bin]]
name = "1507"
