[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_std"] }
md5 = "0.7.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
scraper = "0.21.0"
serde = { version = "1.0.214", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
